# selenium_tools

./: .gitignore  README.md  app.py  config.py.template  install_service.sh  pyproject.toml  selenium_tools.service.template
selenium_tools/: __init__.py  costco.py  line_notify.py  web_driver_factory.py  youtube.py
tests/: test_selenium_tools.py
