[tool.poetry]
name = "selenium_tools"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.7.0"
selenium = "^4.17.2"
requests = "^2.31.0"
APScheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
rope = "^1.12.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
